# Sepples

./: README.md
Snake/: CMakeLists.txt  README.md  main.cpp
Snake/src/: colors.hpp  structs.hpp
SortVisualizer/: CMakeLists.txt  main.cpp
Trie/: CMakeLists.txt  main.cpp
Trie/src/: trie.cpp  trie.hpp
